After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647102 - Nautilus extension triggers a critical at startup
Nautilus extension triggers a critical at startup
Status: RESOLVED FIXED
Product: brasero
Classification: Applications
Component: nautilus-extension
3.0.x
Other Linux
: Normal normal
: 2.26
Assigned To: Brasero maintainer(s)
Brasero maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-04-07 21:05 UTC by Cosimo Cecchi
Modified: 2011-08-20 22:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus: wait for the track to load file info before adding to session (1.62 KB, patch)
2011-04-07 21:16 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-04-07 21:05:10 UTC
To reproduce, with nautilus 3.0 and brasero 3.0:

- right click on an ISO
- select "Write to Disc"
- you will get this assertion: ** (nautilus:22731): CRITICAL **: brasero_track_type_equal: assertion `type_B != NULL' failed

Here's a backtrace that might be useful for you to debug this.

(gdb) bt
  • #0 g_logv
    at gmessages.c line 553
  • #1 g_log
    at gmessages.c line 577
  • #2 g_return_if_fail_warning
    at gmessages.c line 586
  • #3 brasero_track_type_equal
    at brasero-track-type.c line 415
  • #4 brasero_session_cfg_track_changed
    at brasero-session-cfg.c line 1330
  • #5 g_cclosure_marshal_VOID__OBJECT
    at gmarshal.c line 638
  • #6 g_type_class_meta_marshal
    at gclosure.c line 878
  • #7 g_closure_invoke
    at gclosure.c line 767
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3294
  • #9 g_signal_emit_valist
    at gsignal.c line 2987
  • #10 g_signal_emit
    at gsignal.c line 3044
  • #11 brasero_burn_session_track_changed
    at brasero-session.c line 189
  • #12 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #13 g_closure_invoke
    at gclosure.c line 767
  • #14 signal_emit_unlocked_R
    at gsignal.c line 3256
  • #15 g_signal_emit_valist
    at gsignal.c line 2987
  • #16 g_signal_emit
    at gsignal.c line 3044
  • #17 brasero_track_changed
    at brasero-track.c line 530
  • #18 brasero_track_image_cfg_get_info_cb
    at brasero-track-image-cfg.c line 134
  • #19 g_simple_async_result_complete
    at gsimpleasyncresult.c line 747
  • #20 complete_in_idle_cb_for_thread
    at gsimpleasyncresult.c line 812
  • #21 g_idle_dispatch
    at gmain.c line 4545
  • #22 g_main_dispatch
    at gmain.c line 2440
  • #23 g_main_context_dispatch
    at gmain.c line 3013
  • #24 g_main_context_iterate
    at gmain.c line 3091
  • #25 g_main_loop_run
    at gmain.c line 3299
  • #26 gtk_dialog_run
    at gtkdialog.c line 1105
  • #27 launch_brasero_on_window_session
    at nautilus-burn-extension.c line 162
  • #28 launch_brasero_on_window_track
    at nautilus-burn-extension.c line 311
  • #29 write_iso_activate_cb
    at nautilus-burn-extension.c line 334
  • #30 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 79
  • #31 g_closure_invoke
    at gclosure.c line 767
  • #32 signal_emit_unlocked_R
    at gsignal.c line 3256
  • #33 g_signal_emit_valist
    at gsignal.c line 2987
  • #34 g_signal_emit
    at gsignal.c line 3044
  • #35 nautilus_menu_item_activate
    at nautilus-menu-item.c line 102
  • #36 extension_action_callback
    at nautilus-view.c line 4679

Comment 1 Cosimo Cecchi 2011-04-07 21:16:47 UTC
Created attachment 185478 [details] [review]
nautilus: wait for the track to load file info before adding to session

No idea if this is the right fix for this bug, but it makes the assertion go away here (I don't know the brasero architecture at all).
Comment 2 Luis Medinas 2011-08-16 13:29:57 UTC
Review of attachment 185478 [details] [review]:

Makes sense to me... this should get the assertion go away.

Thanks Cosimo this will land on 3.1.5 now.
Comment 3 Luis Medinas 2011-08-17 21:15:34 UTC
Comment on attachment 185478 [details] [review]
nautilus: wait for the track to load file info before adding to session

commited in git master.
thanks Cosimo