nautilus: wait for the track to load file info before adding to session

https://bugzilla.gnome.org/show_bug.cgi?id=647102